fixed button spacing

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -79,7 +79,6 @@ nav li > a:hover {
 nav .login-button {
   padding-left:1em;
   padding-right:1em;
-  margin-left: 0.5em;
 }
 
 .login-slider-wrapper {
